# Helth

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py  medgemma_config.py
docs/: MEDGEMMA_SETUP.md
docs/adr/: 0001-arquitetura-persistencia.md  README.md
examples/: medgemma_usage.py
scripts/: ingest_data.py  test_medgemma.py  test_persistence_integration.py
src/ML/: diabetes_dataset.py  diabetic_data.py
src/agents/: nesy_agent.py
src/llm/: __init__.py  medgemma.py
src/persistence/: __init__.py  week4_persistence.py
