[project]
name = "Helth"
version = "0.1.0"
dependencies = [
    # Databases
    "chromadb",              # Vector store para RAG
    "pymongo",               # MongoDB para dados não estruturados
    "psycopg[binary]",       # PostgreSQL para dados estruturados
    "sqlalchemy",            # ORM
    
    # LLM & AI
    "langchain>=0.1.0",      # Framework para LLM agents
    "langchain-core",        # Core do LangChain
    "langchain-community",   # Integrações community
    
    # MedGemma - escolher UMA das seguintes opções:
    # Opção 1: HuggingFace (local, mais controlo)
    "transformers>=4.38.0",  # Para carregar modelos HuggingFace
    "accelerate",            # Otimização GPU
    "bitsandbytes",          # Quantização 4-bit
    "torch>=2.0.0",          # PyTorch
    "sentencepiece",         # Tokenizer
    
    # Opção 2: Google Vertex AI (cloud, escalável) - descomentar se usar
    # "langchain-google-vertexai",
    # "google-cloud-aiplatform",
    
    # Utilities
    "streamlit",             # Interface web
    "python-dotenv",         # Gestão de variáveis de ambiente
    "pandas",                # Manipulação de dados
    "numpy",                 # Cálculos numéricos
    "requests",              # HTTP requests
    "beautifulsoup4",        # Web scraping
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "jupyter",               # Para notebooks de exploração
    "ipykernel",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99 # (pep8)
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # errors (pycodestyle)
    "W",   # warnings (pycodestyle)
    "F",   # errors (pyflakes)
    "I",   # import (isort)
    "N",   # naming (pep8-naming)
    "UP",  # modern Python syntax (pyupgrade)
    "B",   # catch bugs/design problems (flake8-bugbear)
    "C4",  # better list/dict/set comprehensions (flake8-comprehensions)
    "SIM", # simplification suggestions (flake8-simplify)
]
ignore = []